--- a/app/src/main/res/layout/reports.xml
+++ b/app/src/main/res/layout/reports.xml
@@ -11,9 +11,9 @@
         android:layout_height="wrap_content"
         android:background="@drawable/round_button"
         android:layout_marginTop="10dp"
-        android:paddingRight="300dp"
-        android:text="<     "
-        android:textSize="20dp" />
+        android:paddingEnd="300dp"
+        android:text="Back"
+        android:textSize="16dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="5dp"
         android:text="@string/chart_type"
-        android:textSize="18dp"
+        android:textSize="16sp"
         />
     <Spinner
         android:id="@+id/chartSpinner"
@@ -33,7 +33,7 @@
         android:layout_marginEnd="90dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="16sp"
         />
 
     <LinearLayout
@@ -49,7 +49,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/start_date"
-            android:textSize="18dp"
+            android:textSize="16sp"
             />
         <TextView
             android:layout_width="fill_parent"
@@ -60,7 +60,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/end_date"
-            android:textSize="18dp"
+            android:textSize="16sp"
             />
     </LinearLayout>
     <LinearLayout
@@ -74,7 +74,7 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="18sp"
+            android:textSize="16sp"
             />
         <Spinner
             android:id="@+id/endSpinner"
@@ -83,7 +83,7 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="18sp"
+            android:textSize="16sp"
             />
     </LinearLayout>
 
@@ -97,16 +97,16 @@
         android:layout_marginStart="90dp"
         android:layout_marginEnd="90dp"
         android:text="Generate Chart"
-        android:textSize="18dp"
+        android:textSize="16sp"
         />
-
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/chartFragment"
+        android:id="@+id/childFragmentContainer"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
 
 </LinearLayout>
