--- a/app/src/main/res/layout/quiz_review.xml
+++ b/app/src/main/res/layout/quiz_review.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/round_button"
         android:layout_marginTop="10dp"
-        android:paddingRight="300dp"
+        android:gravity="center_vertical"
+        android:paddingStart="30dp"
         android:text="Back"
         android:textSize="20dp"
         />
@@ -25,7 +26,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="10dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center_vertical"
         android:paddingStart="25dp"
         android:background="@drawable/text_box"
         android:textSize="21dp"
@@ -40,12 +41,11 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="30dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center_vertical"
         android:paddingStart="25dp"
         android:background="@drawable/text_box"
         android:textSize="20dp"
-        android:text="Samantha is planning to make some beaded necklaces.
-        She has a total of 120 beads and wants to use 15 beads per necklace. How many necklaces can Samantha make?"
+        android:text="Sample Question?"
         />
 
     <Button
@@ -56,7 +56,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center_vertical"
         android:paddingStart="25dp"
         android:background="@drawable/round_button"
         android:textSize="18dp"
@@ -70,7 +70,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center_vertical"
         android:paddingStart="25dp"
         android:background="@drawable/round_button"
         android:textSize="18dp"
@@ -84,7 +84,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center_vertical"
         android:paddingStart="25dp"
         android:background="@drawable/round_button"
         android:textSize="18dp"
@@ -97,7 +97,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center_vertical"
         android:paddingStart="25dp"
         android:background="@drawable/round_button"
         android:textSize="18dp"
@@ -112,8 +112,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginTop="20dp"
-        android:gravity="start|center_vertical"
-        android:paddingStart="25dp"
+        android:gravity="center"
         android:background="@drawable/round_button"
         android:textSize="18dp"
         android:text="TAP TO REVEAL ANSWER"
