--- a/app/src/main/res/layout/reports.xml
+++ b/app/src/main/res/layout/reports.xml
@@ -8,22 +8,22 @@
     <Button
         android:id="@+id/backButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_button"
+        android:layout_height="33dp"
         android:layout_marginTop="10dp"
-        android:paddingEnd="300dp"
+        android:background="@drawable/round_button"
+        android:paddingEnd="320dp"
         android:text="Back"
-        android:textSize="16dp" />
+        android:textSize="12dp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:text="@string/chart_type"
-        android:textSize="16sp"
+        android:textSize="14sp"
         />
     <Spinner
         android:id="@+id/chartSpinner"
@@ -33,7 +33,7 @@
         android:layout_marginEnd="90dp"
         android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="16sp"
+        android:textSize="14sp"
         />
 
     <LinearLayout
@@ -49,7 +49,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/start_date"
-            android:textSize="16sp"
+            android:textSize="14sp"
             />
         <TextView
             android:layout_width="fill_parent"
@@ -60,7 +60,7 @@
             android:gravity="center"
             android:layout_weight="1"
             android:text="@string/end_date"
-            android:textSize="16sp"
+            android:textSize="14sp"
             />
     </LinearLayout>
     <LinearLayout
@@ -74,7 +74,7 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="14sp"
             />
         <Spinner
             android:id="@+id/endSpinner"
@@ -83,24 +83,22 @@
             android:layout_weight="1"
             android:layout_gravity="center"
             android:gravity="center"
-            android:textSize="16sp"
+            android:textSize="14sp"
             />
     </LinearLayout>
 
     <Button
         android:id="@+id/generateButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_button"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
         android:layout_marginStart="90dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="90dp"
         android:text="Generate Chart"
-        android:textSize="16sp"
-        />
+        android:textSize="12sp" />
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/childFragmentContainer"
+        android:id="@+id/childQuizFragment"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -108,5 +106,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/childWinRecordsFragment"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
